--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,11 @@ services:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_USER: test
       MYSQL_PASSWORD: test
+  frontend:
+    build: ./react/
+    volumes:
+      - ./react/app/:/usr/src/app
+    environment:
+      REACT_APP_BACKEND_SERVER: localhost:5000
+    ports:
+      - "3000:3000"
