--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_USER: test
       MYSQL_PASSWORD: test
+
   frontend:
     build: ./react/
     volumes:
@@ -19,3 +20,13 @@ services:
       REACT_APP_BACKEND_SERVER: localhost:5000
     ports:
       - "3000:3000"
+  
+  backend:
+    build: ./flask/
+    volumes:
+      - ./flask/app/:/usr/src/app
+    environment:
+      FLASK_PORT: 5000
+      FLASK_DEBUG: "true"
+    ports:
+      - "5000:5000"
