add flask and react

--- a/flask/Dockerfile
+++ b/flask/Dockerfile
@@ -1,9 +1,10 @@
-FROM python:alpine
+FROM python:3.9
 
 WORKDIR /usr/src/app
 
 COPY ./app/requiements.txt ./
 
+RUN pip install --upgrade pip
 RUN pip install -r requiements.txt
 
 COPY ./app /app
