--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,8 @@ services:
       REACT_APP_BACKEND_SERVER: localhost:5000
     ports:
       - "3000:3000"
+    depends_on:
+      - backend
   
   backend:
     build: ./flask/
@@ -28,5 +30,14 @@ services:
     environment:
       FLASK_PORT: 5000
       FLASK_DEBUG: "true"
+      FLASK_DB_HOST: "db:3306"
+      FLASK_DB_NAME: "app"
+      FLASK_DB_USER: "root"
+      FLASK_DB_PASSWORD: "root"
+      
     ports:
       - "5000:5000"
+    depends_on:
+      - db
+    links:
+      - db
